--- a/.github/workflows/c-cpp-make.yml
+++ b/.github/workflows/c-cpp-make.yml
@@ -15,4 +15,9 @@ jobs:
     - uses: actions/checkout@v3
     - name: make
       run: make sample
+    - name: check
+      run: make check
+    - name: make distcheck
+      run: make distcheck
+      
 
